--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "jest-mock-extended": "^3.0.6",
     "prettier": "^3.0.0",
     "prisma": "^5.13.0",
     "source-map-support": "^0.5.21",
@@ -62,6 +63,9 @@
       "ts"
     ],
     "rootDir": "src",
+    "moduleNameMapper": {
+      "src/(.*)": "<rootDir>/$1"
+    },
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
