--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 name: menu-app
 services:
   dev-db:
@@ -10,5 +8,15 @@ services:
       - .env
     networks:
       - menu-app-network
+
+  e2e-test-db:
+    image: postgres:15.4
+    ports:
+      - 5435:5432
+    env_file:
+      - .env.test
+    networks:
+      - menu-app-network
+
 networks:
   menu-app-network:
