--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
   "scripts": {
     "build": "nest build",
     "start": "nest start",
-    "dev": "docker compose up -d && nest start --watch",
-    "debug": "docker compose up -d && nest start --debug --watch",
+    "dev": "docker compose up dev-db -d && pnpm prisma db push && nest start --watch",
+    "debug": "docker compose up dev-db -d && nest start --debug --watch",
     "start:prod": "node dist/main",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "studio": "pnpm prisma studio",
+    "studio": "docker compose up dev-db -d && pnpm prisma studio",
+    "studio:e2e": "docker compose up e2e-test-db -d && dotenv -e .env.test -- pnpm prisma studio --port 7777",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "docker compose up e2e-test-db -d && dotenv -e .env.test -- pnpm prisma generate && dotenv -e .env.test -- pnpm prisma db push && dotenv -e .env.test -- jest --config ./jest-e2e.config.ts && docker compose stop e2e-test-db"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -50,6 +51,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "dotenv-cli": "^7.4.1",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -64,25 +66,5 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "moduleNameMapper": {
-      "src/(.*)": "<rootDir>/$1"
-    },
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
